overflow animation fixed

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -58,3 +58,7 @@ section {
         padding-block: 2em;
     }
 }
+
+body{
+    overflow-x: hidden;
+}
